--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "files": ["command.php"]
     },
     "require": {
-        "wp-cli/wp-cli": "~1.5.0"
+        "wp-cli/wp-cli": ">=1.5.0"
     },
     "require-dev": {
         "behat/behat": "2.5.*"
